<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetail.MovieDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/image_movie_detail_poster"
            android:layout_width="105dp"
            android:layout_height="175dp"
            android:background="@drawable/background_image_rounded"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/image_movie_detail_poster"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_movie_detail_title"
                style="@style/TextStyle.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                tools:text="ANGEL HAS FALLEN" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/item_recycler_main_movie_text_genre" />

                    <TextView
                        android:id="@+id/text_movie_detail_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/colorAccent"
                        tools:text="Action" />

                </TableRow>

                <TableRow android:layout_marginTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/item_recycler_main_movie_text_duration" />

                    <TextView
                        android:id="@+id/text_movie_detail_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/colorAccent"
                        tools:text="2h 1m" />

                </TableRow>

                <TableRow android:layout_marginTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/item_recycler_main_movie_text_rating" />

                    <TextView
                        android:id="@+id/text_movie_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/colorAccent"
                        tools:text="D 17+" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_movie_detail_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_movie_detail_poster"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_movie_detail_rating_score"
                style="@style/TextStyle.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="9.3" />

            <RatingBar
                android:id="@+id/rating_movie_detail_movie"
                style="?ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:progressTint="@color/colorRatingBar"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                tools:rating="4" />

        </LinearLayout>

        <View
            android:id="@+id/view_movie_detail_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/linear_movie_detail_rating_bar"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/text_movie_detail_synopsis_body"
            style="@style/TextStyle.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_movie_detail_line"
            android:layout_marginTop="16dp"
            android:text="@string/movie_detail_text_synopsis" />

        <TextView
            android:id="@+id/text_movie_detail_synopsis_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_movie_detail_synopsis_body"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.25"
            tools:text="Secret Service Agent Mike Banning is framed for the attempted assassination of the President and must evade his own agency and the FBI as he tries to uncover the real threat." />

    </RelativeLayout>

    <Button
        android:id="@+id/button_movie_detail_buy_ticket"
        style="@style/ButtonStyle.Rectangle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:text="@string/movie_detail_button_buy_ticket"
        android:textSize="16sp" />

</RelativeLayout>